--- a/index.ipynb
+++ b/index.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,42 +691,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'m': 0.5483169999998062,\n",
+       "[{'m': 0, 'rss': 368964.16669999994, 'slope': -548316.9999998063},\n",
+       " {'m': 0.5483169999998062,\n",
        "  'rss': 131437.9413767516,\n",
-       "  'slope': -548316.9999998063},\n",
+       "  'slope': -318023.86000024853},\n",
        " {'m': 0.8663408600000547,\n",
        "  'rss': 51531.31420747324,\n",
-       "  'slope': -318023.86000024853},\n",
+       "  'slope': -184453.83880040026},\n",
        " {'m': 1.050794698800455,\n",
        "  'rss': 24649.097944855268,\n",
-       "  'slope': -184453.83880040026},\n",
+       "  'slope': -106983.22650372575},\n",
        " {'m': 1.1577779253041809,\n",
        "  'rss': 15604.976802103287,\n",
-       "  'slope': -106983.22650372575},\n",
+       "  'slope': -62050.271372208954},\n",
        " {'m': 1.2198281966763898,\n",
        "  'rss': 12561.987166284125,\n",
-       "  'slope': -62050.271372208954},\n",
+       "  'slope': -35989.15739588847},\n",
        " {'m': 1.2558173540722781,\n",
        "  'rss': 11538.008028425651,\n",
-       "  'slope': -35989.15739588847},\n",
+       "  'slope': -20873.711289696075},\n",
        " {'m': 1.2766910653619743,\n",
        "  'rss': 11193.357340315255,\n",
-       "  'slope': -20873.711289696075},\n",
+       "  'slope': -12106.752547970245},\n",
        " {'m': 1.2887978179099446,\n",
        "  'rss': 11077.310067278091,\n",
-       "  'slope': -12106.752547970245},\n",
-       " {'m': 1.295819734387769,\n",
-       "  'rss': 11038.209831325046,\n",
        "  'slope': -7021.916477824561}]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
