--- a/index.ipynb
+++ b/index.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
     "    step_list = []\n",
     "    for x_value in x_values:\n",
     "        for y_value in y_values:\n",
-    "            #for i in range(steps):\n",
+    "            for i in range(steps):\n",
     "                cost_curve_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
     "                rss_value = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "                step_list.append({'m': current_m, 'rss': rss_value, 'slope': cost_curve_slope})\n",
