--- a/index.ipynb
+++ b/index.ipynb
@@ -673,24 +673,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    step_list = []\n",
-    "    \n",
-    "            #for i in range(steps):\n",
-    "                cost_curve_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
-    "                rss_value = residual_sum_squares(x_values, y_values, current_m, b)\n",
-    "                step_list.append({'m': current_m, 'rss': rss_value, 'slope': cost_curve_slope})\n",
-    "                current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
+    "    for i in range(steps):\n",
+    "        cost_curve_slope = slope_at(x_values, y_values, current_m, b)['slope']\n",
+    "        rss_value = residual_sum_squares(x_values, y_values, current_m, b)\n",
+    "        step_list.append({'m': current_m, 'rss': rss_value, 'slope': cost_curve_slope})\n",
+    "        current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
     "    return step_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -720,10 +719,19 @@
        "  'slope': -12106.752547970245},\n",
        " {'m': 1.2887978179099446,\n",
        "  'rss': 11077.310067278091,\n",
-       "  'slope': -7021.916477824561}]"
+       "  'slope': -7021.916477824561},\n",
+       " {'m': 1.295819734387769,\n",
+       "  'rss': 11038.209831325046,\n",
+       "  'slope': -4072.711557128059},\n",
+       " {'m': 1.299892445944897,\n",
+       "  'rss': 11025.020590634533,\n",
+       "  'slope': -2362.172703124088},\n",
+       " {'m': 1.302254618648021,\n",
+       "  'rss': 11020.562895703,\n",
+       "  'slope': -1370.0601677373925}]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
